💄 fixing width on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ body {
   background-color: #777777;
   color: var(--color-text);
   padding: 10px;
+  width: fit-content;
 }
 
 hr {
@@ -130,6 +131,7 @@ a {
 .container {
   display: flex;
   max-width: 1000px;
+  min-width: 800px;
   margin: auto;
   min-height: 100vh;
   box-shadow: 1px 0px 9px 0px black, -1px 0px 9px 0px black;
